<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.activities.loginOrSignUp.LoginSignUpActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_150sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_50sdp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">


        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/black_rounded_btn"
            android:fontFamily="@font/ubuntu_bold"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_13sdp"
            android:text="@string/Login"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_17ssp"
            android:textAllCaps="false"
            android:gravity="center" />


        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:background="@drawable/black_rounded_btn"
            android:fontFamily="@font/ubuntu_bold"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_13sdp"
            android:text="@string/SignUp"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_17ssp"
            android:textAllCaps="false"
            android:gravity="center" />


        <TextView
            android:id="@+id/forgotPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_70sdp"
            android:text="@string/forgotPassword"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"/>

        <TextView
            android:id="@+id/contactUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/contactUs"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"/>

    </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <include layout="@layout/main_toolbar_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>