<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="@dimen/_25sdp"
    android:layout_marginBottom="@dimen/_65sdp"
    android:background="@color/colorPrimary"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_3sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/settings"
            android:textColor="#444544"
            android:textSize="@dimen/_20ssp"
            android:gravity="center"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp">

            <TextView
                android:id="@+id/accountTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Account"
                android:textColor="@color/darkGray"
                android:fontFamily="@font/ubuntu_regular"
                android:textSize="@dimen/_13ssp"
                android:drawableStart="@drawable/user_account_icon"
                android:drawablePadding="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_12sdp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="#dadada"
                android:layout_margin="@dimen/_10sdp"/>


            <TextView
                android:id="@+id/profileTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="My Profile"
                android:textColor="@color/darkGray"
                android:fontFamily="@font/ubuntu_regular"
                android:textSize="@dimen/_13ssp"
                android:drawableStart="@drawable/user_account_icon"
                android:drawablePadding="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_12sdp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="#dadada"
                android:layout_margin="@dimen/_10sdp"/>




            <TextView
                android:id="@+id/notificationsTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Notifications"
                android:textColor="@color/darkGray"
                android:fontFamily="@font/ubuntu_regular"
                android:textSize="@dimen/_13ssp"
                android:drawableStart="@drawable/notification_icon"
                android:drawablePadding="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_12sdp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="#dadada"
                android:layout_margin="@dimen/_10sdp"/>

            <TextView
                android:id="@+id/previewTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Preview"
                android:textColor="@color/darkGray"
                android:fontFamily="@font/ubuntu_regular"
                android:textSize="@dimen/_13ssp"
                android:drawableStart="@drawable/preview_icon"
                android:drawablePadding="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_12sdp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="#dadada"
                android:layout_margin="@dimen/_10sdp"/>

            <TextView
                android:id="@+id/securityTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PrivacySecurity"
                android:textColor="@color/darkGray"
                android:fontFamily="@font/ubuntu_regular"
                android:textSize="@dimen/_13ssp"
                android:drawableStart="@drawable/lock_icon"
                android:drawablePadding="@dimen/_11sdp"
                android:layout_marginStart="@dimen/_10sdp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="#dadada"
                android:layout_margin="@dimen/_10sdp"/>

            <TextView
                android:id="@+id/aboutTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:drawableStart="@drawable/info_icon"
                android:drawablePadding="@dimen/_15sdp"
                android:fontFamily="@font/ubuntu_regular"
                android:text="@string/About"
                android:textColor="@color/darkGray"
                android:textSize="@dimen/_13ssp" />

        </LinearLayout>




    </LinearLayout>
</androidx.core.widget.NestedScrollView>