<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="@dimen/_25sdp"
    android:layout_marginBottom="@dimen/_65sdp"
    android:background="@color/colorPrimary"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_marginBottom="@dimen/_3sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/circle_border_img"
                android:layout_gravity="center"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/preview_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/ubuntu_regular"
                android:text="@string/Preview"
                android:textColor="#444544"
                android:textSize="@dimen/_20ssp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_3sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_weight="2.4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Language"
                    android:textColor="@color/darkGray"
                    android:fontFamily="@font/ubuntu_regular"
                    android:textSize="@dimen/_16ssp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:drawableEnd="@drawable/ic_polygon"
                    android:gravity="center_vertical"
                    android:text="@string/EN"
                    android:textColor="#9798A1"
                    android:textSize="@dimen/_13ssp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="#dadada"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="@font/ubuntu_regular"
                    android:text="@string/FontSize"
                    android:textColor="@color/darkGray"
                    android:textSize="@dimen/_16ssp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".9"
                    android:drawableEnd="@drawable/ic_polygon"
                    android:gravity="center_vertical"
                    android:text="@string/Medium"
                    android:textColor="#9798A1"
                    android:textSize="@dimen/_13ssp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="#dadada"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp" />



        </LinearLayout>



    </LinearLayout>
</androidx.core.widget.NestedScrollView>