<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="LoginViewModel"
            type="com.launchcenter.ui.activities.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.activities.login.LoginActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_100sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_3sdp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@color/colorPrimary"
                    app:cardCornerRadius="@dimen/_25sdp"
                    app:cardElevation="@dimen/_5sdp">

                    <EditText
                        android:id="@+id/usernameET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={LoginViewModel.Email}"
                        android:background="@color/colorPrimary"
                        android:hint="@string/Email"
                        android:padding="@dimen/_10sdp"
                        android:drawableStart="@drawable/ic_profile"
                        android:drawablePadding="@dimen/_10sdp"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/_10ssp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:textColor="@color/darkGray"
                        android:textColorHint="@color/darkGray"/>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@color/colorPrimary"
                    app:cardCornerRadius="@dimen/_25sdp"
                    app:cardElevation="@dimen/_5sdp">


                    <EditText
                        android:id="@+id/passwordET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={LoginViewModel.Password}"
                        android:background="@color/colorPrimary"
                        android:hint="@string/password"
                        android:padding="@dimen/_10sdp"
                        android:drawableStart="@drawable/ic_password"
                        android:drawablePadding="@dimen/_10sdp"
                        android:inputType="textPassword"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/_10ssp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:textColor="@color/darkGray"
                        android:textColorHint="@color/darkGray"/>

                </androidx.cardview.widget.CardView>


                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_45sdp"
                    android:layout_marginEnd="@dimen/_35sdp"
                    android:background="@drawable/black_rounded_btn"
                    android:fontFamily="@font/ubuntu_bold"
                    android:gravity="center"
                    android:onClick="@{(v) -> LoginViewModel.onLoginBtnClick(v)}"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_13sdp"
                    android:text="@string/Login"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_17ssp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_20sdp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/signUpTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/SignUp"
                        android:fontFamily="@font/ubuntu_light"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/_10ssp"/>

                    <TextView
                        android:id="@+id/forgotPassTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/loginForgotPass"
                        android:fontFamily="@font/ubuntu_light"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/_10ssp"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/agreeTerms"
                        android:textColor="#040404"
                        android:textSize="@dimen/_7ssp"
                        android:fontFamily="@font/ubuntu_regular"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:text="@string/termsConditions"
                        android:textColor="@color/red"
                        android:textSize="@dimen/_7ssp"
                        android:fontFamily="@font/ubuntu_regular"/>
                </LinearLayout>


            </LinearLayout>


        </androidx.core.widget.NestedScrollView>

        <include layout="@layout/main_toolbar_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>