<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="@dimen/_25sdp"
    android:layout_marginBottom="@dimen/_65sdp"
    android:background="@color/colorPrimary"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_3sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/LaunchPremium"
            android:textColor="#444544"
            android:textSize="@dimen/_20ssp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            >

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_40sdp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/dark_edittext_border"
                >


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_light"
                    android:gravity="center"
                    android:paddingTop="@dimen/_30sdp"
                    android:paddingStart="@dimen/_20sdp"
                    android:paddingEnd="@dimen/_20sdp"
                    android:text="@string/launchPremimDescription"
                    android:textSize="@dimen/_18ssp"
                    android:textColor="@color/darkGray"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_light"
                    android:gravity="center"
                    android:paddingBottom="@dimen/_30sdp"
                    android:paddingStart="@dimen/_20sdp"
                    android:paddingEnd="@dimen/_20sdp"
                    android:text="@string/launchPremimDescription2"
                    android:textSize="@dimen/_18ssp"
                    android:textColor="@color/darkGray"/>

            </LinearLayout>


            <ImageView
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:src="@drawable/best_seller_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/startServiceBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_35sdp"
                android:background="@drawable/black_rounded_btn"
                android:fontFamily="@font/ubuntu_bold"
                android:gravity="center"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_13sdp"
                android:text="@string/startService"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_20ssp" />





    </LinearLayout>
</androidx.core.widget.NestedScrollView>